# common/model/request/request.go
@@ -12,11 +12,11 @@ type SortInfo struct {
 
 // Find by id structure
 type GetById struct {
-	ID uint `json:"id" form:"id"` // 主键ID
+	ID uint `json:"id" form:"id" validate:"required"` // 主键ID
 }
 
-type IdsReq struct {
-	Ids []string `json:"ids" form:"ids"`
+type IdsRequest struct {
+	Ids []uint `json:"ids" form:"ids" validate:"required"`
 }
 
 type Empty struct{}
